WIP: data generation for ato scenario

--- a/containers/gaming-api/api/package.json
+++ b/containers/gaming-api/api/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seed-data.js",
-    "test": "curl -X POST http://localhost:3000/api/auth/login -H 'Content-Type: application/json' -d '{\"username\":\"testuser\",\"password\":\"password123\"}'"
+    "test": "echo 'No tests configured'"
   },
   "keywords": [],
   "author": "",
