add: gaming api to repo

--- a/.gitignore
+++ b/.gitignore
@@ -394,3 +394,6 @@ notes/
 
 ctf_scenarios/gaming/behavioural_analysis/data/
 data/
+
+# Exception: include gaming api data
+!containers/gaming-api/api/data/
