--- a/containers/gaming-api/api/Cargo.toml
+++ b/containers/gaming-api/api/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
-name = "gaming-api"
+name = "gaming-api-server"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 anyhow = "1.0.99"
-chrono = { version = "0.4.42", features = ["serde"] }
-clap = { version = "4.5.47", features = ["derive"] }
-fake = { version = "4.4.0", features = ["derive", "chrono"] }
-futures = "0.3.31"
-rand = "0.9.2"
-serde = { version = "1.0.219", features = ["derive"] }
+axum = "0.8.4"
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
+chrono = "0.4.42"
+serde = "1.0.219"
 serde_json = "1.0.143"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
-thiserror = "2.0.16"
-tokio = { version = "1.47.1", features = ["full"] }
+sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
+tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
+tower = { version = "0.5.2", features = ["util"] }
+uuid = { version = "1.18.1", features = ["v4"] }
