--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Wazuh Manager
   wazuh.manager:
@@ -146,6 +144,8 @@ services:
       - /tmp
     security_opt:
       - seccomp:unconfined
+    depends_on:
+      - wazuh.manager  # Ensure Wazuh is ready before starting
 
   # Gaming API Container - MMO-style API for credential stuffing demo
   gaming-api:
