Model enterprise attack surface, soc, and scenarios

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,13 @@ API_PASSWORD=CHANGE_ME_api_password
 
 # Wazuh cluster key
 WAZUH_CLUSTER_KEY=CHANGE_ME_cluster_key
+
+# Enterprise services
+DB_PASSWORD=techvault_db_pass
+AD_ADMIN_PASSWORD=Admin123!
+
+# SOC tools
+MISP_ADMIN_PASSWORD=MispAdmin2024!
+THEHIVE_SECRET=thehive-lab-secret-key-2024
+SHUFFLE_ADMIN_PASSWORD=ShuffleAdmin2024!
+SHUFFLE_API_KEY=shuffle-lab-api-key-2024
