--- a/config/wazuh_cluster/wazuh_manager.conf
+++ b/config/wazuh_cluster/wazuh_manager.conf
@@ -265,6 +265,12 @@
     
     <!-- Kali red team logging rules -->
     <rule_include>etc/rules/kali_redteam_rules.xml</rule_include>
+
+    <!-- Enterprise detection rules -->
+    <rule_include>etc/rules/ad_rules.xml</rule_include>
+    <rule_include>etc/rules/webapp_rules.xml</rule_include>
+    <rule_include>etc/rules/suricata_rules.xml</rule_include>
+    <rule_include>etc/rules/database_rules.xml</rule_include>
   </ruleset>
 
   <rule_test>
